Fix footer covering up long page text.

--- a/containers/webserver/html/static/style.css
+++ b/containers/webserver/html/static/style.css
@@ -31,7 +31,7 @@ html, body {
 #container {
     min-height:100%;
     position:relative;
-    padding-bottom: 10px;
+    padding-bottom: 1em;
 }
 
 .title {
